# serendipity

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  azure-pipelines.yml  package-lock.json  package.json  rush.json  semantic.json  serendipity.code-workspace  tsconfig.esm.json  tsconfig.json  tslint.json
cli/slipr/: .eslintrc.json  .rollup-shim.js  package.json  rollup.config.ts  tsconfig.json
common/config/: eslint.json
compiler/desugar/: package.json
compiler/parser/: .gitignore  Cargo.toml  package.json  package.old.json  parser.cjs  parser.d.ts  parser.mjs  tsconfig.base.json  tsconfig.cjs.json  tsconfig.mjs.json
compiler/parser/lib/: index.ts
compiler/parser/src/: lib.rs
compiler/reader/: package-lock.json  package.json  reader.ebnf  rollup.config.js  tsconfig.json
compiler/typecheck/: package.json
compiler/wasm/: package.json
editor/app/: in.js  package.json  tsconfig.json
editor/camino/: README.md  package.json  tsconfig.json  tsconfig.scripts.json
editor/project-store/: package.json
editor/stores/: package.json  tsconfig.json
lib/core/: lib.sdp  package.json
public/: index.html
runtime/interpreter/: package.json  tsconfig.json
src/: App.css  App.js  App.tsx  index.js  index.tsx
src/components/: Terminal.tsx
src/hooks/: stores.tsx
src/stores/: PrefsStore.js  PrefsStore.ts  ProjectStore.js  ProjectStore.ts
src/test/: test_basic.ts  test_lower.ts  test_print.ts
src/util/: Debug.ts  Draggable.js  Draggable.ts  index.js  withStores.ts
syntax/abstract/: package.json  tsconfig.json
syntax/syntax/: .gitignore  (+2 more)
(+339 files in other folders)
