[package]
name = "serendipity_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seglisp = { path = "../../../seglisp/seglisp", features = ["js_interop"]}
itertools = "0.10"
wasm-bindgen = "0.2"
